-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0, 5.12
-
None
-
-
cc59f0de557e2d8fba274a86ba43afc4ffcd935b (qt/qtbase/5.15)
If there are no printers installed on Windows or Mac then no print dialog is displayed and a message about not using the Qt print dialog is output to the message log. This is a bad user experience as they may not see the log message and so do not know why the dialog will not display. Both Windows and Mac dialogs can be displayed without printers installed, and have the option to install printers from within them. Mac also has the option of printing to PDF without a printer installed. We should allow the dialog to be displayed in this event, however this will rely on some mechanism being in place to refresh the internal printer list when any new printer is added. In the interim we should display a message box to the user asking them to install a printer first.
- is duplicated by
-
QTBUG-5193 QPrinter: print preview does not produce any PDF file when no default printer is specified - Mac OS X
-
- Closed
-
- is required for
-
QTBUG-25384 QtPrintSupport - Windows issues
-
- Open
-
-
QTBUG-37698 QtPrintSupport - Dialog Issues
-
- Open
-
-
QTBUG-25383 QtPrintSupport - macOS Issues
-
- Closed
-
- relates to
-
QTBUG-28658 Mac: The print dialog does not open if no printer hardware is installed (assistant and creator)
-
- Closed
-
| For Gerrit Dashboard: QTBUG-36112 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 83027,1 | QPrintDialog - Fix Mac when no printers installed | stable | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 292662,4 | macOS: Support printing when no printers are installed | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |