QPrintDialog - Fix Mac when no printers installed

If no printers are installed then the print dialog and page setup dialog
will not open, with no feedback to the user. As a temporary work-around
display a message box to tell them to configure a printer first.

Task-number: QTBUG-36112
Change-Id: Ifc1a1d99cbc895a16dafaead81776f4167070662